various site styling changes

--- a/about.html
+++ b/about.html
@@ -13,23 +13,23 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="./index.html">Home</a>
-      <a href="./about.html">About Me</a>
-      <a href="./resume.html">Resume</a>
-      <a href="./projects.html">Projects</a>
-      <a href="./links">Links</a>
+      <a href="./index.html" class="hover-under">Home</a>
+      <a href="./about.html" class="hover-under">About Me</a>
+      <a href="./resume.html" class="hover-under">Resume</a>
+      <a href="./projects.html" class="hover-under">Projects</a>
+      <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content">
+      <h1>Hi, I am Jeffrey and I am a:</h1>
       <div class="about-hobbies">
-        <h1 class="hov-text hov-pink">Software Engineer.</h1>
-        <h1 class="hov-text hov-orange">Techie.</h1>
-        <h1 class="hov-text hov-yellow">Keyboard Enthusiast.</h1>
-        <h1 class="hov-text hov-green">Audio Enjoyer.</h1>
-        <h1 class="hov-text hov-blue">Video Gamer.</h1>
+        <p class="hov-text">Software Engineer.</p>
+        <p class="hov-text">Techie.</p>
+        <p class="hov-text">Keyboard Enthusiast.</p>
+        <p class="hov-text">Audio Enjoyer.</p>
+        <p class="hov-text">Video Gamer.</p>
       </div>
       <div>
-        <h2>About me:</h2>
-        <h3>
+        <p>
           I'm a Software Engineer driven by a relentless passion for growth and
           excellence. After graduating from San Jose State University, my
           journey began at Bitglass, a dynamic cybersecurity startup, where I
@@ -38,18 +38,18 @@
           experience navigating the challenges and opportunities of a larger
           organization, all while continuing to hone my skills as a web
           developer.
-        </h3>
-        <h3>
+        </p>
+        <p>
           I specialize in crafting clean, efficient, and impactful web
           applications that solve real problems and enhance user experiences.
           Outside of coding, I&apos;m often immersed in the world of custom
           mechanical keyboards, high-fidelity audio setups, or video games.
-        </h3>
-        <h3>
+        </p>
+        <p>
           After taking a career break, I&apos;m now actively exploring new
           opportunities where I can bring my technical expertise, creativity,
           and enthusiasm.
-        </h3>
+        </p>
       </div>
     </div>
   </body>
