--- a/projects.html
+++ b/projects.html
@@ -13,37 +13,37 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="./index.html">Home</a>
-      <a href="./about.html">About Me</a>
-      <a href="./resume.html">Resume</a>
-      <a href="./projects.html">Projects</a>
-      <a href="./links.html">Links</a>
+      <a href="./index.html" class="hover-under">Home</a>
+      <a href="./about.html" class="hover-under">About Me</a>
+      <a href="./resume.html" class="hover-under">Resume</a>
+      <a href="./projects.html" class="hover-under">Projects</a>
+      <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content">
       <h1>Projects:</h1>
       <div class="project-content">
         <div class="card">
           <h1>Panda Pocket</h1>
-          <p>Description:</p>
           <p>
+            <strong>Description:</strong><br />
             Panda Pocket is an app that allows users with a GitHub or Google
             account to keep track of a their monthly expenses. There are various
             charts that allow Users to see any expense data they may be curious
             about at a glance.
           </p>
-          <p>Tech details:</p>
           <p>
+            <strong>Tech Details:</strong><br />
             Frontend: React, Tailwind, Recharts, Lucide, HeadlessUI
             <br />Backend: NextJS, Prisma DB, MongoDB
           </p>
-          <p></p>
-          <p>Contribution:</p>
           <p>
+            <strong>Contributions:</strong><br />
             I worked with a friend on this project, we both were involved in
-            various E2E processes, creating several pages and RESTful APIs from scratch.
+            various E2E processes, creating several pages and RESTful APIs from
+            scratch.
           </p>
-          <p>Takeaways:</p>
           <p>
+            <strong>Takeaways:</strong><br />
             NextJS is a valuable library based on the face it can support both
             Server Side Rendering (SSR) and Client Side Rendering (CSR). It is
             also nice being able to use javascript in the entire stack.
@@ -51,18 +51,29 @@
             Prisma was an ORM that was quite easy to use and MongoDB was also
             relatively straightforward for what the project itself required.
           </p>
-          <p>Links:</p>
-          <a href="https://github.com/Eric-shipsit/PocketPanda">Repository</a>
+          <strong>Links:</strong><br />
+          <a
+            href="https://github.com/Eric-shipsit/PocketPanda"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Repository</a
+          >
+          <a
+            href="https://pocket-panda-taupe.vercel.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Live Deployment</a
+          >
         </div>
         <div class="card">
           <h1>Portfolio Website</h1>
-          <p>Description:</p>
           <p>
+            <strong>Description:</strong><br />
             This is currently the site you are on. This project was created to
             provide a platform to showcase any future projects.
           </p>
-          <p>Tech details:</p>
           <p>
+            <strong>Tech Details:</strong><br />
             This project is aimed on focusing on refining the fundamentals,
             involving understanding and writing basic boilerplate from scratch.
             The site itself is built purely off of HTML and CSS. Seeing as there
@@ -70,15 +81,23 @@
             complex, other complex libraries and frameworks were not necessary.
             SVG Icons were taken from Lucide.
           </p>
-          <p>Contribution:</p>
-          <p>This is a project that I have completed by myself.</p>
-          <p>Takeaways:</p>
           <p>
+            <strong>Contributions:</strong><br />
+            This is a project that I have completed from scratch by myself.
+          </p>
+          <p>
+            <strong>Takeaways:</strong><br />
             Reviewing several HTML and CSS fundamentals was incredibly useful.
             It was an eye opener how far HTML and CSS can take you without
             involving Javascript.
           </p>
-          <p>Links:</p>
+          <strong>Links:</strong><br />
+          <a
+            href="https://github.com/JesWu/jeswu.github.io"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Repository</a
+          >
         </div>
       </div>
     </div>
