--- a/resume.html
+++ b/resume.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="./index.html">Home</a>
-      <a href="./about.html">About Me</a>
-      <a href="./resume.html">Resume</a>
-      <a href="./projects.html">Projects</a>
-      <a href="./links.html">Links</a>
+      <a href="./index.html" class="hover-under">Home</a>
+      <a href="./about.html" class="hover-under">About Me</a>
+      <a href="./resume.html" class="hover-under">Resume</a>
+      <a href="./projects.html" class="hover-under">Projects</a>
+      <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content">
       <h1>Jeffrey Wu</h1>
