--- a/index.html
+++ b/index.html
@@ -13,29 +13,91 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="./index.html">Home</a>
-      <a href="./about.html">About Me</a>
-      <a href="./resume.html">Resume</a>
-      <a href="./projects.html">Projects</a>
-      <a href="./links.html">Links</a>
+      <a href="./index.html" class="hover-under">Home</a>
+      <a href="./about.html" class="hover-under">About Me</a>
+      <a href="./resume.html" class="hover-under">Resume</a>
+      <a href="./projects.html" class="hover-under">Projects</a>
+      <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content intro-container intro-bg">
       <div class="type-container">
         <h1 class="intro-text">Hi, I'm Jeffrey</h1>
       </div>
       <div class="intro-image-container">
-        <img
-          class="intro-image"
-          alt="code"
-          src="./static/square-terminal.svg"
-        />
-        <img class="intro-image" alt="game" src="./static/joystick.svg" />
-        <img class="intro-image" alt="keyboard" src="./static/keyboard.svg" />
-        <img
-          class="intro-image"
-          alt="headphone"
-          src="./static/headphones.svg"
-        />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-square-terminal-icon lucide-square-terminal intro-image"
+        >
+          <path d="m7 11 2-2-2-2" />
+          <path d="M11 13h4" />
+          <rect width="18" height="18" x="3" y="3" rx="2" ry="2" />
+        </svg>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-joystick-icon lucide-joystick intro-image"
+        >
+          <path
+            d="M21 17a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-2Z"
+          />
+          <path d="M6 15v-2" />
+          <path d="M12 15V9" />
+          <circle cx="12" cy="6" r="3" />
+        </svg>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-keyboard-icon lucide-keyboard intro-image"
+        >
+          <path d="M10 8h.01" />
+          <path d="M12 12h.01" />
+          <path d="M14 8h.01" />
+          <path d="M16 12h.01" />
+          <path d="M18 8h.01" />
+          <path d="M6 8h.01" />
+          <path d="M7 16h10" />
+          <path d="M8 12h.01" />
+          <rect width="20" height="16" x="2" y="4" rx="2" />
+        </svg>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-headphones-icon lucide-headphones intro-image"
+        >
+          <path
+            d="M3 14h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a9 9 0 0 1 18 0v7a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3"
+          />
+        </svg>
       </div>
     </div>
   </body>
