--- a/resume.html
+++ b/resume.html
@@ -22,82 +22,86 @@
     <div class="content">
       <h1>Jeffrey Wu</h1>
 
-      <h2>Experience</h2>
+      <div class="card">
+        <h2>Experience</h2>
 
-      <h3>Software Engineer II, Forcepoint - Campbell, CA</h3>
-      <p><em>July 2023 - August 2024</em></p>
-      <ul>
-        <li>
-          Led a cross-functional team of 3 engineers in a high-visibility
-          integration project, enabling the migration of 100+ customers from
-          legacy products to Forcepoint ONE.
-        </li>
-        <li>
-          Took ownership of key components in Forcepoint ONE, driving feature
-          development and optimization.
-        </li>
-        <li>
-          Mentored 2 new team members through code reviews, peer programming,
-          and knowledge-sharing.
-        </li>
-        <li>
-          Improved internal development tools, saving 3 hours of engineering
-          time per week.
-        </li>
-        <li>
-          Integrated Forcepoint ONE with site-wide analytics API, boosting
-          customer feedback rates by 30%.
-        </li>
-        <li>
-          Enhanced React components with Redux, reducing loading time from 10s
-          to 5s.
-        </li>
-        <li>
-          Developed a POC prompt analysis system using AWS Bedrock and LLaMA,
-          reducing workflow time from 10 minutes to 3, winning 3rd place at a
-          hackathon.
-        </li>
-      </ul>
+        <h3>Software Engineer II, Forcepoint - Campbell, CA</h3>
+        <p><em>July 2023 - August 2024</em></p>
+        <ul>
+          <li>
+            Led a cross-functional team of 3 engineers in a high-visibility
+            integration project, enabling the migration of 100+ customers from
+            legacy products to Forcepoint ONE.
+          </li>
+          <li>
+            Took ownership of key components in Forcepoint ONE, driving feature
+            development and optimization.
+          </li>
+          <li>
+            Mentored 2 new team members through code reviews, peer programming,
+            and knowledge-sharing.
+          </li>
+          <li>
+            Improved internal development tools, saving 3 hours of engineering
+            time per week.
+          </li>
+          <li>
+            Integrated Forcepoint ONE with site-wide analytics API, boosting
+            customer feedback rates by 30%.
+          </li>
+          <li>
+            Enhanced React components with Redux, reducing loading time from 10s
+            to 5s.
+          </li>
+          <li>
+            Developed a POC prompt analysis system using AWS Bedrock and LLaMA,
+            reducing workflow time from 10 minutes to 3, winning 3rd place at a
+            hackathon.
+          </li>
+        </ul>
 
-      <h3>Software Engineer I, Bitglass/Forcepoint - Campbell, CA</h3>
-      <p><em>August 2021 - July 2023</em></p>
-      <ul>
-        <li>
-          Modernized legacy jQuery pages to React, improving user experience and
-          maintainability.
-        </li>
-        <li>Built scalable REST APIs using Django REST Framework.</li>
-        <li>
-          Maintained 95% test coverage, reducing bugs and customer-reported
-          defects.
-        </li>
-        <li>
-          Used GitHub Copilot to automate unit testing and reduce dev time by 4
-          hours weekly.
-        </li>
-        <li>
-          Collaborated with stakeholders to clarify features, cutting support
-          tickets by 50%.
-        </li>
-      </ul>
-
-      <h2>Skills</h2>
-      <ul>
-        <li>
-          <strong>Programming Languages:</strong> JavaScript, Python, Java, SQL,
-          CSS, HTML
-        </li>
-        <li>
-          <strong>Frameworks and Libraries:</strong> NodeJS, React, Redux,
-          Typescript, Prisma, NextJS, Django, jQuery, Jest, Styled Components
-        </li>
-        <li><strong>Tools:</strong> Jira, Git, GitHub Copilot</li>
-        <li><strong>Methodologies:</strong> Agile, Scrum</li>
-      </ul>
-
-      <h2>Education</h2>
-      <p>San Jose State University - B.S. in Software Engineering</p>
-      <p><em>Graduated Fall 2020</em></p>
+        <h3>Software Engineer I, Bitglass/Forcepoint - Campbell, CA</h3>
+        <p><em>August 2021 - July 2023</em></p>
+        <ul>
+          <li>
+            Modernized legacy jQuery pages to React, improving user experience
+            and maintainability.
+          </li>
+          <li>Built scalable REST APIs using Django REST Framework.</li>
+          <li>
+            Maintained 95% test coverage, reducing bugs and customer-reported
+            defects.
+          </li>
+          <li>
+            Used GitHub Copilot to automate unit testing and reduce dev time by
+            4 hours weekly.
+          </li>
+          <li>
+            Collaborated with stakeholders to clarify features, cutting support
+            tickets by 50%.
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <h2>Skills</h2>
+        <ul>
+          <li>
+            <strong>Programming Languages:</strong> JavaScript, Python, Java,
+            SQL, CSS, HTML
+          </li>
+          <li>
+            <strong>Frameworks and Libraries:</strong> NodeJS, React, Redux,
+            Typescript, Prisma, NextJS, Django, jQuery, Jest, Styled Components
+          </li>
+          <li><strong>Tools:</strong> Jira, Git, GitHub Copilot</li>
+          <li><strong>Methodologies:</strong> Agile, Scrum</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h2>Education</h2>
+        <p>San Jose State University - B.S. in Software Engineering</p>
+        <p><em>Graduated Fall 2020</em></p>
+      </div>
     </div>
   </body>
 </html>
