--- a/about.html
+++ b/about.html
@@ -20,15 +20,19 @@
       <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content">
-      <h1>Hi, I am Jeffrey and I am a:</h1>
-      <div class="about-hobbies">
-        <p class="hov-text">Software Engineer.</p>
-        <p class="hov-text">Techie.</p>
-        <p class="hov-text">Keyboard Enthusiast.</p>
-        <p class="hov-text">Audio Enjoyer.</p>
-        <p class="hov-text">Video Gamer.</p>
-      </div>
-      <div>
+        <h1>About me:</h1>
+      <div class="card">
+        <div class="about-hobbies">
+          <p class="hov-text">Software Engineer.</p>
+          <p class="hov-text">Techie.</p>
+          <p class="hov-text">VR Enthusiast.</p>
+          <p class="hov-text">Keyboard Tinkerer.</p>
+          <p class="hov-text">Audio Enjoyer.</p>
+          <p class="hov-text">Video Gamer.</p>
+        </div>
+        <br/>
+        <hr/>
+        <br/>
         <p>
           I'm a Software Engineer driven by a relentless passion for growth and
           excellence. After graduating from San Jose State University, my
