--- a/about.html
+++ b/about.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="description" content="Jeffrey's Portfolio Site" />
+    <meta name="author" content="Jeffrey Wu" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#92cccc" />
+
     <title>Jeffrey's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,7 +25,7 @@
       <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content">
-        <h1>About me:</h1>
+      <h1>About me:</h1>
       <div class="card">
         <div class="about-hobbies">
           <p class="hov-text">Software Engineer.</p>
@@ -30,9 +35,9 @@
           <p class="hov-text">Audio Enjoyer.</p>
           <p class="hov-text">Video Gamer.</p>
         </div>
-        <br/>
-        <hr/>
-        <br/>
+        <br />
+        <hr />
+        <br />
         <p>
           I'm a Software Engineer driven by a relentless passion for growth and
           excellence. After graduating from San Jose State University, my
