add viewport height

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta name="description" content="Jeffrey's Portfolio Site" />
     <meta name="author" content="Jeffrey Wu" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0"
+    />
     <meta name="theme-color" content="#92cccc" />
-    
+
     <title>Jeffrey's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
