--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,10 @@
   <head>
     <meta name="description" content="Jeffrey's Portfolio Site" />
     <meta name="author" content="Jeffrey Wu" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0"
+    />
     <meta name="theme-color" content="#92cccc" />
 
     <title>Jeffrey's Portfolio</title>
