updating color scheme, adding past work projects

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta name="description" content="Jeffrey's Portfolio Site" />
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0"
     />
-    <meta name="theme-color" content="#92cccc" />
+    <meta name="theme-color" content="#464646" />
 
     <title>Jeffrey's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
@@ -42,25 +42,28 @@
         <hr />
         <br />
         <p>
-          I'm a Software Engineer driven by a relentless passion for growth and
-          excellence. After graduating from San Jose State University, my
-          journey began at Bitglass, a dynamic cybersecurity startup, where I
-          grew in a fast-paced, high-impact environment. Following
-          Bitglass&apos;s acquisition by Forcepoint, I gained invaluable
-          experience navigating the challenges and opportunities of a larger
-          organization, all while continuing to hone my skills as a web
-          developer.
+          Hello! I'm Jeffrey, a Software Engineer driven by a burning passion
+          for growth and excellence. After graduating from San Jose State
+          University with a Bachelor of Science in Software Engineering in Fall
+          of 2020, my journey began at cybersecurity startup Bitglass, where I
+          grew in a fast, impactful environment. Following Bitglass&apos;s
+          acquisition by Forcepoint, I gained experience navigating the
+          challenges and workflows of a larger organization.
         </p>
         <p>
-          I specialize in crafting clean, efficient, and impactful web
-          applications that solve real problems and enhance user experiences.
-          Outside of coding, I&apos;m often immersed in the world of custom
-          mechanical keyboards, high-fidelity audio setups, or video games.
+          I strive to craft clean, efficient, and impactful web applications
+          that solve real problems that I encounter while delivering the best
+          user experiences possible. Outside of coding, I&apos;m often immersed
+          in the world of custom mechanical keyboards, high-fidelity audio
+          setups, or video games.
         </p>
         <p>
-          After taking a career break, I&apos;m now actively exploring new
-          opportunities where I can bring my technical expertise, creativity,
-          and enthusiasm.
+          After layoffs from my previous employer, I have taken a
+          career break to refocus and re-evaluate my professional goals. Now I
+          have returned with a newfound passion for the front-end field and AI.
+          I&apos;m now actively exploring new opportunities where I can bring my
+          skillset and growth mindset to contribute to solving real world
+          problems.
         </p>
       </div>
     </div>
