--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0"
     />
-    <meta name="theme-color" content="#92cccc" />
+    <meta name="theme-color" content="#464646" />
 
     <title>Jeffrey's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
@@ -24,7 +24,7 @@
       <a href="./index.html" class="hover-under">Home</a>
       <a href="./about.html" class="hover-under">About Me</a>
       <a href="./resume.html" class="hover-under">Resume</a>
-      <a href="./projects.html" class="hover-under">Projects</a>
+      <a href="./projects.html" class="hover-under">Projects</a> 
       <a href="./links.html" class="hover-under">Links</a>
     </nav>
     <div class="content intro-container intro-bg">
