--- a/links.html
+++ b/links.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0"
     />
-    <meta name="theme-color" content="#92cccc" />
+    <meta name="theme-color" content="#464646" />
 
     <title>Jeffrey's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
