--- a/projects.html
+++ b/projects.html
@@ -175,9 +175,9 @@
             </p>
             <p>
               <strong>Takeaways:</strong><br />
-              Never underestimate simple tasks, as it may involve code written
-              by people no longer with the company and parts of the codebase you
-              touch may be extremely old.
+              Coordinating with cross-organizational teams is difficult. Each
+              team has a different culture. It is important to be adaptable and
+              understanding of the differences in order to work well together.
             </p>
           </div>
         </div>
